removed showcase sections from css to fix white padding under video on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -100,22 +100,6 @@ header a:hover{
   font-weight:bold;
 }
 
-/* Showcase */
-#showcase{
-  min-height:400px;
-  text-align:center;
-  color:#ffffff;
-}
-
-#showcase h1{
-  margin-top:100px;
-  font-size:55px;
-  margin-bottom:10px;
-}
-
-#showcase p{
-  font-size:20px;
-}
 
 /* video-section */
 #myVideo {
